Fix for body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
   font-family:'Varela Round', sans-serif;
   font-size:18px;
   background:#dfe7ff;
+  overflow:hidden;
 }
 .container{
   display:flex;
